some template fixes for styling

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,10 @@ body{
   color: #505962;
 }
 
+.seeMe {
+  border: 1px solid lightgray;
+}
+
 .antDDefault {
   background: #ECECEC;
   padding: 30px;
@@ -36,7 +40,7 @@ body{
 
 .navbar-nav li {
   font-size: 1.2rem;
-  padding-right: .7rem;
+  padding-right: .7rem; 
 }
 .navbar-dark .navbar-nav .nav-link{
   color: white;
@@ -45,7 +49,7 @@ body{
 
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link:hover {
-    color: #3fb1b7;
+    color: #863509;
 }
 
 .home-inner{
@@ -124,7 +128,7 @@ h3.heading {
 .heading-underline{
   width: 3rem;
   height: .2rem;
-  background-color: #3fb1b7;
+  background-color: #80341f;
   margin: 0 auto 2rem;
 }
 
